--- a/package.json
+++ b/package.json
@@ -9,13 +9,13 @@
     "build": "strapi build",
     "strapi": "strapi"
   },
-  "devDependencies": {},
   "dependencies": {
-    "@strapi/plugin-i18n": "4.1.9",
-    "@strapi/plugin-users-permissions": "4.1.9",
-    "@strapi/provider-upload-cloudinary": "4.1.9",
-    "@strapi/strapi": "4.1.9",
-    "pg": "8.7.3"
+    "@strapi/plugin-i18n": "4.4.3",
+    "@strapi/plugin-users-permissions": "4.4.3",
+    "@strapi/provider-upload-cloudinary": "^4.2.3",
+    "@strapi/strapi": "4.4.3",
+    "pg": "8.7.3",
+    "sqlite3": "^5.1.2"
   },
   "author": {
     "name": "A Strapi developer"
