--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
     "@strapi/plugin-users-permissions": "4.4.3",
     "@strapi/provider-upload-cloudinary": "^4.2.3",
     "@strapi/strapi": "4.4.3",
-    "pg": "8.7.3",
-    "sqlite3": "^5.1.2"
+    "better-sqlite3": "^7.6.2",
+    "pg": "8.7.3"
   },
   "author": {
     "name": "A Strapi developer"
